@@ -18,8 +18,7 @@ import org.jfree.data.xy.XYSeries;
 import org.jfree.data.xy.XYSeriesCollection;
 
 /**
- *
- * @author Even Solbraa
+ * @author  Even Solbraa
  * @version
  */
 public class graph2b extends javax.swing.JFrame {
@@ -197,17 +196,18 @@ public class graph2b extends javax.swing.JFrame {
     }// GEN-LAST:event_buttonclick
 
     public CategoryDataset createCategoryDataSource() {
+        /*
         Number[][] data = new Integer[][] {
-                {new Integer(10), new Integer(4), new Integer(15), new Integer(14)},
-                {new Integer(5), new Integer(7), new Integer(14), new Integer(3)},
-                {new Integer(6), new Integer(17), new Integer(12), new Integer(7)},
-                {new Integer(7), new Integer(15), new Integer(11), new Integer(0)},
-                {new Integer(8), new Integer(6), new Integer(10), new Integer(9)},
-                {new Integer(9), new Integer(8), new Integer(8), new Integer(6)},
-                {new Integer(10), new Integer(9), new Integer(7), new Integer(7)},
-                {new Integer(11), new Integer(13), new Integer(9), new Integer(9)},
-                {new Integer(3), new Integer(7), new Integer(11), new Integer(10)}};
-
+                { Integer.valueOf(10), Integer.valueOf(4), Integer.valueOf(15), Integer.valueOf(14) },
+                { Integer.valueOf(5), Integer.valueOf(7), Integer.valueOf(14), Integer.valueOf(3) },
+                { Integer.valueOf(6), Integer.valueOf(17), Integer.valueOf(12), Integer.valueOf(7) },
+                { Integer.valueOf(7), Integer.valueOf(15), Integer.valueOf(11), Integer.valueOf(0) },
+                { Integer.valueOf(8), Integer.valueOf(6), Integer.valueOf(10), Integer.valueOf(9) },
+                { Integer.valueOf(9), Integer.valueOf(8), Integer.valueOf(8), Integer.valueOf(6) },
+                { Integer.valueOf(10), Integer.valueOf(9), Integer.valueOf(7), Integer.valueOf(7) },
+                { Integer.valueOf(11), Integer.valueOf(13), Integer.valueOf(9), Integer.valueOf(9) },
+                { Integer.valueOf(3), Integer.valueOf(7), Integer.valueOf(11), Integer.valueOf(10) } };
+        */
         return null;// new DefaultCategoryDataset(data);
     }
 
@@ -235,7 +235,6 @@ public class graph2b extends javax.swing.JFrame {
      * Getter for property chart.
      * 
      * @return Value of property chart.
-     *
      */
     public JFreeChart getChart() {
         return chart;
@@ -245,7 +244,6 @@ public class graph2b extends javax.swing.JFrame {
      * Setter for property chart.
      * 
      * @param chart New value of property chart.
-     *
      */
     public void setChart(JFreeChart chart) {
         this.chart = chart;
